--- a/ricopili/Dockerfile
+++ b/ricopili/Dockerfile
@@ -30,7 +30,8 @@ RUN apt-get install r-cran-rjava -y
 
 RUN R -e 'install.packages(c("devtools", "remotes", "RcppEigen"), repos = "http://cran.rstudio.com/")'
 RUN R -e 'install.packages("tidyverse", dependencies = TRUE, repos = "http://cran.rstudio.com/")'
-RUN R -e 'install.packages(c("units", "RSQLite","dbplyr","ggplot2"), dependencies = TRUE, repos = "http://cran.rstudio.com/")'
+RUN R -e 'install.packages("units", dependencies = TRUE, repos = "http://cran.rstudio.com/")'
+RUN R -e 'install.packages(c("RSQLite","dbplyr","ggplot2"), dependencies = TRUE, repos = "http://cran.rstudio.com/")'
 
 #Get Linux OS flavor:
 #RUN cat /etc/os-release
@@ -70,14 +71,14 @@ RUN export PATH=/usr/local/lib:/usr/bin:/usr/local/bin:/ricopili/dependencies/Mi
     export PKG_CONFIG_PATH=/usr/lib/x86_64-linux-gnu/pkgconfig:/usr/bin/pkgconfig:/usr/lib/pkgconfig:/usr/share/pkgconfig:/usr/local/lib/pkgconfig:/usr/local/share/pkgconfig
 
 
-RUN Rscript -e 'dir.create(Sys.getenv("R_LIBS_USER"), recursive = TRUE)' && \   ## create personal library & add to the path
+RUN Rscript -e 'dir.create(Sys.getenv("R_LIBS_USER"), recursive = TRUE)' && \
     Rscript -e '.libPaths(Sys.getenv("R_LIBS_USER"))' && \
     #Standard packages
     Rscript -e "install.packages(c('bigsnpr', 'corrgram', 'corrplot', 'd3heatmap', 'data.table', 'DescTools', 'pbkrtest', 'doBy'), repos='http://cran.rstudio.com/')" && \
     Rscript -e "install.packages(c('dplyr', 'extrafont', 'extrafontdb', 'foreign', 'forestplot', 'forestploter'), repos='http://cran.rstudio.com/')" && \
     Rscript -e "install.packages(c('randomForest', 'RColorBrewer', 'readxl', 'reshape', 'reshape2'), repos='http://cran.rstudio.com/')" && \
     Rscript -e "install.packages(c('gdata', 'ggcorrplot', 'ggplot2', 'ggstats', 'gtools', 'gwasrapidd', 'haven', 'igraph', 'jpeg', 'lattice'), repos='http://cran.rstudio.com/')" && \
-    Rscript -e "install.packages(c('lubridate', 'meta', 'metafor', 'MetaSKAT', 'rpf', 'OpenMx', 'pheatmap', 'plyr', 'png', 'psych'), repos='http://cran.rstudio.com/')" && \
+    Rscript -e "install.packages(c('lubridate', 'meta', 'metafor', 'MetaSKAT', 'rpf', 'OpenMx', 'pheatmap', 'plyr', 'png', 'poolr', 'psych'), repos='http://cran.rstudio.com/')" && \
     Rscript -e "install.packages(c('rmarkdown', 'scatterplot3d', 'scales', 'sem', 'semTools', 'stringr'), repos='http://cran.rstudio.com/')" && \
     Rscript -e "install.packages(c('sysfonts', 'systemfonts', 'tibble', 'tidyr', 'ukbtools', 'VennDiagram'), repos='http://cran.rstudio.com/')" && \
     Rscript -e "install.packages(c('viridis', 'viridisLite', 'vroom', 'writexl', 'WriteXLS', 'xtable'), repos='http://cran.rstudio.com/')" && \
@@ -90,24 +91,22 @@ RUN Rscript -e 'dir.create(Sys.getenv("R_LIBS_USER"), recursive = TRUE)' && \
     Rscript -e "BiocManager::install('AnnotationDbi')" && \
     Rscript -e "BiocManager::install('ASSET')" && \
     Rscript -e "BiocManager::install('gwascat')" && \
-    Rscript -e "BiocManager::install('snpStats')" && \  
+    Rscript -e "BiocManager::install('snpStats')" && \
     #install snpStats first otherwise LAVA install won't work: dependency ‘snpStats’ is not available for package ‘LAVA’
     #GitHub packages
     #Sys.unsetenv("GITHUB_PAT")
-    #Rscript -e "remotes::install_github('kenhanscombe/ukbtools', dependencies = TRUE)" && \    #is now on cran so gets installed with standard packages
-    #Rscript -e "remotes::install_github('ramiromagno/gwasrapidd')" && \    #is now on cran so gets installed with standard packages
-    #Rscript -e "remotes::install_github('privefl/bigsnpr')" && \     #LDpred, is now on cran so gets installed with standard packages
-    #Rscript -e "remotes::install_github('leeshawn/MetaSKAT')" && \  #is now on cran so gets installed with standard packages
-    Rscript -e "remotes::install_github('DudbridgeLab/avengeme')" && \  #AVENGEME is a package for polygenic scoring analysis
+    #Rscript -e "remotes::install_github('kenhanscombe/ukbtools', 'ramiromagno/gwasrapidd', 'privefl/bigsnpr', 'leeshawn/MetaSKAT', 'ozancinar/poolR'))" && \
+    #ukbtools gwasrapidd bigsnpr MetaSKAT poolR are now on cran so they get installed with standard packages
+    Rscript -e "remotes::install_github('DudbridgeLab/avengeme')" && \
+    #AVENGEME is a package for polygenic scoring analysis
     Rscript -e "remotes::install_github('MathiasHarrer/dmetar')" && \
     Rscript -e "remotes::install_github('kassambara/easyGgplot2')" && \
     Rscript -e "remotes::install_github('https://github.com/josefin-werme/LAVA.git')" && \
-    #Install postgwas from GitHub via devtools:
     #setRepositories(ind = 1:6)
-    Rscript -e "remotes::install_github('weizhouUMICH/SAIGE')" && \ #SAIGE is an R package with Scalable and Accurate Implementation of Generalized mixed model.
+    Rscript -e "remotes::install_github('weizhouUMICH/SAIGE')" && \
+    #SAIGE is an R package with Scalable and Accurate Implementation of Generalized mixed model.
     Rscript -e "remotes::install_github('merns/postgwas')" && \
     Rscript -e "remotes::install_github('MRCIEU/TwoSampleMR')" && \
-    Rscript -e "remotes::install_github('ozancinar/poolR')" && \
     Rscript -e "installed.packages(); .libPaths(); .libPaths( c( .libPaths(), '/ricopili/dependencies/R_packages', '/usr/local/lib/R/site-library') )"
 
 #RUN Rscript -e 'system("sudo apt-get install -y libxml2-dev")' && \
@@ -116,10 +115,7 @@ RUN Rscript -e 'dir.create(Sys.getenv("R_LIBS_USER"), recursive = TRUE)' && \
     #Rscript -e 'Sys.setenv(PKG_CONFIG_PATH="/usr/lib/x86_64-linux-gnu/pkgconfig")' && \
     #Rscript -e 'system("echo $PKG_CONFIG_PATH")' && \
     #Rscript -e 'install.packages("remotes", repos="https://cloud.r-project.org")' && \
-    #Rscript -e 'remotes::install_github("r-lib/xml2")' && \
-    #Rscript -e 'remotes::install_github("r-lib/systemfonts")' && \
-    #Rscript -e 'remotes::install_github("rstudio/httpuv")' && \
-    #Rscript -e 'remotes::install_github("r-lib/devtools")'
+    #Rscript -e 'remotes::install_github(c("r-lib/xml2","r-lib/systemfonts","rstudio/httpuv","r-lib/devtools"))'
 #RUN Rscript -e "install.packages('cmutils', repos = NULL, type = 'source')"
 #RUN Rscript -e 'install.packages("xml2", configure.vars="INCLUDE_DIR=/usr/lib/x86_64-linux-gnu/pkgconfig", repos="https://cloud.r-project.org")'
 #RUN Rscript -e 'install.packages("systemfonts", configure.vars="INCLUDE_DIR=/usr/lib/x86_64-linux-gnu/pkgconfig", repos="https://cloud.r-project.org")'
