--- a/ricopili/Dockerfile
+++ b/ricopili/Dockerfile
@@ -43,10 +43,9 @@ ENV PKG_CONFIG_PATH=/usr/lib/x86_64-linux-gnu/pkgconfig:/usr/bin/pkgconfig:/usr/
 RUN export PKG_CONFIG_PATH=/usr/lib/x86_64-linux-gnu/pkgconfig:/usr/bin/pkgconfig:/usr/lib/pkgconfig:/usr/share/pkgconfig:/usr/local/lib/pkgconfig:/usr/local/share/pkgconfig 
 RUN echo $PKG_CONFIG_PATH
 
-    
 RUN apt-get update && apt-get install -y python3-pip python3-dev && pip3 install --upgrade pip && pip3 install notebook jupyterlab 
-    #&& \
-    #sudo chown $(whoami):$(whoami) /.local
+RUN pip3 install --upgrade setuptools && pip3 install ez_setup
+#RUN sudo chown $(whoami):$(whoami) /.local
 
 #RUN apt-get update && \
     #apt-get install -y --no-install-recommends r-base && \
